# resources/lib/generated/openapi.json
@@ -474,6 +474,10 @@
           "invitedByEmail": {
             "type": "string"
           },
+          "inviteeExists": {
+            "default": false,
+            "type": "boolean"
+          },
           "isExpired": {
             "default": false,
             "type": "boolean"
@@ -1880,7 +1884,7 @@
     "/api/teams/{team_slug}/members/add": {
       "post": {
         "deprecated": false,
-        "description": "Add a member to a team, or send an invitation if the user doesn't exist.\n\nIf the user exists in the system, they are added directly as a team member.\nIf the user doesn't exist, an invitation email is sent to them to sign up\nand join the team.\n\nReturns:\n    Updated team data (with new member if user existed).\n\nRaises:\n    ValidationException: If the user is already a member or has a pending invitation.",
+        "description": "Add a member to a team, or send an invitation if the user doesn't exist.\n\nIf the user exists in the system, they are added directly as a team member.\nIf the user doesn't exist, an invitation email is sent to them to sign up\nand join the team.\n\nReturns:\n    Message describing whether the user was added or invited.\n\nRaises:\n    ValidationException: If the user is already a member or has a pending invitation.",
         "operationId": "AddMemberToTeam",
         "parameters": [
           {
@@ -1911,7 +1915,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Team"
+                  "$ref": "#/components/schemas/Message"
                 }
               }
             },
@@ -3660,7 +3664,7 @@
     "/teams/{team_slug}/invitations/{invitation_id}": {
       "delete": {
         "deprecated": false,
-        "description": "Cancel a pending invitation.\n\nReturns:\n    Redirect to invitations page.",
+        "description": "Cancel a pending invitation.\n\nRaises:\n    PermissionDeniedException: If the invitation does not belong to the team.\n\nReturns:\n    Redirect to invitations page.",
         "operationId": "CancelTeamInvitation",
         "parameters": [
           {
